# oscillation

./: Cargo.toml  README.md
.github/workflows/: build-docs.yml  build-nightly-all-features.yml  build-nightly.yml  build-stable-all-features.yml  build-stable.yml  coverage.yml  lint.yml  test.yml
src/: lib.rs  plot.rs  util.rs  wavetable.rs
src/oscillator/: direct.rs  direct_dtc.rs  mod.rs  wave.rs  wave_dtc.rs
src/waveform/: mod.rs  noise.rs  rounded_triangle.rs  sawtooth.rs  sine.rs  square.rs  triangle.rs  waveforms.rs
