[package]
name = "oscillation"
version = "0.1.0"
authors = ["Sigurd Sætherø Spangelo"]
edition = "2024"
license = "MIT"
description = "Oscillators and a collection of waveforms for real-time usage."
repository = "https://github.com/sigurd4/oscillation"
keywords = ["oscillators", "vst", "real-time", "waveforms", "synthesizers"]
categories = ["algorithms", "mathematics", "multimedia::audio", "no-std::no-alloc"]
exclude = ["plots/"]

[dependencies]
moddef = "0.2.6"
rand = "0.9.1"
num-traits = "0.2.19"
num-complex = "0.4.6"
serde = {version = "1.0.219", features = ["derive"]}
GSL = "7.0.0"

[dev-dependencies]
plotters = "0.3.7"
linspace = "0.1.1"